# talk-to-claude

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/commands/: start-audio.md  stop-audio.md
config/: config.yaml.example
src/talk_to_claude/: __init__.py  main.py
src/talk_to_claude.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/talk_to_claude/audio/: __init__.py  capture.py  vad.py
src/talk_to_claude/iterm/: __init__.py  controller.py  position_detector.py  session_manager.py
src/talk_to_claude/transcription/: __init__.py  base.py  command_parser.py  deepgram_client.py  elevenlabs_client.py  factory.py  openai_client.py
src/talk_to_claude/ui/: __init__.py  overlay.py
src/talk_to_claude/utils/: __init__.py  config.py  logger.py
